Fix crossroad text item alignment

--- a/scss/modules/_action-crossroad.scss
+++ b/scss/modules/_action-crossroad.scss
@@ -47,7 +47,7 @@
   img {
     grid-row: 2;
     grid-column: 1;
-    width: calc(100% - 2em);
+    width: calc(100%);
     padding: 2em 1em;
   }
 
@@ -59,13 +59,14 @@
 
   .crossroad-button {
     grid-row: 3;
-    grid-column: 1 / span 2;
+    grid-column: 2;
     color: $color-background;
     background-color: $color-social;
     text-align: center;
-    width: 33%;
-    margin: auto;
-    padding: .5em;
+    //width: 8em;
+    margin-left: 0;
+    margin-right: auto;
+    padding: .3em .5em;
     font-size: 1em;
     text-transform: uppercase;
     text-decoration: none;
